# sweet-magnet

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust-clippy.yml
downloads/: Torrentio1080p_HDR.torrent
src/: config.rs  error.rs  main.rs
src/protocol/: dht.rs  message.rs  metadata.rs  mod.rs  peer.rs  piece.rs  tracker.rs  udp_tacker.rs
src/torrent/: client.rs  magnet.rs  mod.rs
src/ui/: cli.rs  mod.rs
